# lab06

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  REPORT6.md
.github/workflows/: ci.yml  gtests.yml  release.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  example1  example2  install_manifest.txt
_install/include/: print.hpp
artifacts/: lab05-0.1.0.0-Linux.deb
banking/: Transaction.hpp
examples/: example2.cpp
sources/: print.cpp
tests/: test_account.cpp  test_print.cpp  test_transaction.cpp
